--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,5 @@ jobs:
     - uses: actions/checkout@v4
     - name: Test the Docker image
       run: docker build . --file Dockerfile --tag hello-world-rust && docker run -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image hello-world-rust:latest
+    - name: Check that code can compile
+      run: cargo check
