--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
 
-  build:
+  build-job:
 
     runs-on: ubuntu-latest
 
@@ -16,5 +16,12 @@ jobs:
     - uses: actions/checkout@v4
     - name: Test the Docker image
       run: docker build . --file Dockerfile --tag hello-world-rust && docker run -v /var/run/docker.sock:/var/run/docker.sock aquasec/trivy image hello-world-rust:latest
+
+  test-cargo-job:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
     - name: Check that code can compile
       run: cargo check
